Closed Bug 1150376 Opened 11 years ago Closed 11 years ago

Right click menu does not paint on screen

Categories

(Core :: Graphics: Layers, defect)

x86_64
Windows 7
defect
Not set
major

Tracking

()

VERIFIED FIXED
mozilla40
Tracking Status
firefox37 --- ?
firefox38 + verified
firefox39 + verified
firefox40 + verified
firefox-esr31 --- unaffected
firefox-esr38 - ---

People

(Reporter: mayankleoboy1, Assigned: bas.schouten)

References

Details

(Keywords: regression, Whiteboard: gfx-noted)

Attachments

(8 files)

Attached file about support.txt
User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:40.0) Gecko/20100101 Firefox/40.0 Build ID: 20150401180920 Steps to reproduce: 1. Create a new profile 2. Right click on the screen OR right click on the title bar Actual results: the right click menu doesnt paint on screen. Only a transparent border is painted Expected results: not so
Attached image bug.png
If i disable HWA, the bug goes away
Please post your Graphic section from about:support
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: regression
https://downloadcenter.intel.com/download/22167/ Try updating to the last driver released for Intel 4 Series chipset, 8.15.10.2869. 8.15.10.2302 is very old.
Attached file about support.txt
updated about:support, with updated drivers. As per intel, for my IGP, the latest drivers were released in 2012. So maybe block this class of IGP's altogether?
(In reply to GMA from comment #5) > https://downloadcenter.intel.com/download/22167/ > > Try updating to the last driver released for Intel 4 Series chipset, > 8.15.10.2869. 8.15.10.2302 is very old. Did it. Bug is still reproducible.
Seems to be fallout from bug 1147728 according to comment 1
Whiteboard: gfx-noted
Bas, does this make sense to you? Thanks!
Flags: needinfo?(bas)
(In reply to mayankleoboy1 from comment #6) > Created attachment 8587382 [details] > about support.txt > > updated about:support, with updated drivers. > As per intel, for my IGP, the latest drivers were released in 2012. So maybe > block this class of IGP's altogether? Could you post your about support with no custom prefs or settings or anything of the likes set. i.e. with a clean profile?
Assignee: nobody → bas
Flags: needinfo?(bas)
Tracking for 38+ since this is a recent regression.
(In reply to Bas Schouten (:bas.schouten) from comment #16) > Could someone that can reproduce this bug try this build: > > https://ftp-ssl.mozilla.org/pub/mozilla.org/firefox/try-builds/ > bschouten@mozilla.com-9620d2164545 I tried it. This build fixed the "right click" issue. But it has started giving a new issue : 1. In the address bar, type "bug" 2. The drop down is blank.
Attached image bug.jpg
If this helps: In the blank drop-down-box, if you put your mouse inside the drop-down-box, and scroll with the wheel, the box paints correctly.
(In reply to mayankleoboy1 from comment #19) > If this helps: > > In the blank drop-down-box, if you put your mouse inside the drop-down-box, > and scroll with the wheel, the box paints correctly. Additionally, when the drop-down-box becomes visible, it doesnt scroll correctly, neither with the scroll bar, nor with the mouse scroll button. When i try to scroll. the entries wont move up or down. But suddenly they would just move randomly. When i try to scroll with the scroll bar, the scroll bar will get stuck and wont move. Plus the CPU use is higher while i try to scroll: In the HWA disabled case -> ~5% In HWA enabled case-> ~17%
(In reply to mayankleoboy1 from comment #17) > (In reply to Bas Schouten (:bas.schouten) from comment #16) > > Could someone that can reproduce this bug try this build: > > > > https://ftp-ssl.mozilla.org/pub/mozilla.org/firefox/try-builds/ > > bschouten@mozilla.com-9620d2164545 > > > I tried it. This build fixed the "right click" issue. > But it has started giving a new issue : > > 1. In the address bar, type "bug" > 2. The drop down is blank. Did this drop down box work correctly in a regular nightly for you?
(In reply to Bas Schouten (:bas.schouten) from comment #21) > (In reply to mayankleoboy1 from comment #17) > > (In reply to Bas Schouten (:bas.schouten) from comment #16) > > > Could someone that can reproduce this bug try this build: > > > > > > https://ftp-ssl.mozilla.org/pub/mozilla.org/firefox/try-builds/ > > > bschouten@mozilla.com-9620d2164545 > > > > > > I tried it. This build fixed the "right click" issue. > > But it has started giving a new issue : > > > > 1. In the address bar, type "bug" > > 2. The drop down is blank. > > Did this drop down box work correctly in a regular nightly for you? No. Tried with the latest nightly, and with HWA enabled, i get this blank drop down. So a different bug?
(In reply to mayankleoboy1 from comment #22) > (In reply to Bas Schouten (:bas.schouten) from comment #21) > > (In reply to mayankleoboy1 from comment #17) > > > (In reply to Bas Schouten (:bas.schouten) from comment #16) > > > > Could someone that can reproduce this bug try this build: > > > > > > > > https://ftp-ssl.mozilla.org/pub/mozilla.org/firefox/try-builds/ > > > > bschouten@mozilla.com-9620d2164545 > > > > > > > > > I tried it. This build fixed the "right click" issue. > > > But it has started giving a new issue : > > > > > > 1. In the address bar, type "bug" > > > 2. The drop down is blank. > > > > Did this drop down box work correctly in a regular nightly for you? > > No. > Tried with the latest nightly, and with HWA enabled, i get this blank drop > down. > So a different bug? It's the same bug just for a different type of window :s. This is tricky, can you make a screencast of what happens when you scroll?
I give up on trying to do a screencast with screenr. :( Can i directly share my screen with you or something using webrtc ?
OK. Here is a screen capture. Red circles = left click Green circle = right click When the cursor is inside the box, i am trying to scroll with the mouse wheel.
Bas, does the video help? Thanks
Flags: needinfo?(bas)
(In reply to Sylvestre Ledru [:sylvestre] from comment #26) > Bas, does the video help? Thanks Not sufficiently, we -really- need a machine that reproduces this problem in the hands of someone who can work with a firefox build and a debugger.
Flags: needinfo?(bas)
(In reply to Bas Schouten (:bas.schouten) from comment #27) > (In reply to Sylvestre Ledru [:sylvestre] from comment #26) > > Bas, does the video help? Thanks > > Not sufficiently, we -really- need a machine that reproduces this problem in > the hands of someone who can work with a firefox build and a debugger. I can reproduce this.
This ought to effectively work around the problem.
Attachment #8592994 - Flags: review?(jmuizelaar)
Attachment #8592994 - Flags: review?(jmuizelaar) → review+
Comment on attachment 8592994 [details] [diff] [review] Do not try to use WARP for popup windows Review of attachment 8592994 [details] [diff] [review]: ----------------------------------------------------------------- ::: widget/windows/nsWindow.cpp @@ +6582,5 @@ > // transparent windows so don't even try. I'm also not sure if we even > // want to support this case. See bug 593471 > if (!(prefs.mDisableAcceleration || > + mTransparencyMode == eTransparencyTransparent || > + IsPopup())) { Please add a comment about why we do this.
Comment on attachment 8592994 [details] [diff] [review] Do not try to use WARP for popup windows Approval Request Comment [Feature/regressing bug #]: 1147728 [User impact if declined]: On some intel devices popup windows not showing [Describe test coverage new/current, TreeHerder]: None [Risks and why]: Very very low, use non-D3D11 for popups [String/UUID change made/needed]: None
Attachment #8592994 - Flags: approval-mozilla-beta?
Attachment #8592994 - Flags: approval-mozilla-aurora?
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla40
Attachment #8592994 - Flags: approval-mozilla-beta?
Attachment #8592994 - Flags: approval-mozilla-beta+
Attachment #8592994 - Flags: approval-mozilla-aurora?
Attachment #8592994 - Flags: approval-mozilla-aurora+
This should be in 38 beta 5 (released tomorrow) mayankleoboy1, are you going to be available to test it? Thanks
Flags: needinfo?(mayankleoboy1)
using this: https://hg.mozilla.org/mozilla-central/rev/a35163f83d22 I CANNOT reproduce the bug of right click not painting. :) However, this still occurs: The "nightly button", if clicked *repeatedly*, will still paint as blank. However, since this is a non-standard configuration, with an addon ( https://addons.mozilla.org/en-US/firefox/addon/classicthemerestorer/ ) so maybe not that important to fix ?
Flags: needinfo?(mayankleoboy1)
Attached image bug.jpg
notice that this is a non standard config. There is no nightly button in nightlies.
It sounds like we may need to back this out, if the regression in bug 115228 has affected 38 and 39 as well as nightly. Sylvestre I'm not changing the approval flag (yet) but will leave that to you (for when we have confirmation that it's a problem in 38)
Flags: needinfo?(sledru)
Comment on attachment 8592994 [details] [diff] [review] Do not try to use WARP for popup windows ok, thanks
Flags: needinfo?(sledru)
Attachment #8592994 - Flags: approval-mozilla-beta+ → approval-mozilla-beta-
Depends on: 1155530
Comment on attachment 8592994 [details] [diff] [review] Do not try to use WARP for popup windows Too many regressions, not uplifting to aurora
Attachment #8592994 - Flags: approval-mozilla-aurora+ → approval-mozilla-aurora-
and reopening.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
I think we can repush it and land it to Aurora and Beta with also patch from bug #1155228, as for now bug #1155228 is no longer an issue because it was fixed. What do you think about it?
Flags: needinfo?(sledru)
Comment on attachment 8592994 [details] [diff] [review] Do not try to use WARP for popup windows Right, thanks. I asked for an uplift of bug 1155228. We need to uplift both at the same time. Hopefully, they will be in 38 beta 6.
Flags: needinfo?(sledru)
Attachment #8592994 - Flags: approval-mozilla-beta?
Attachment #8592994 - Flags: approval-mozilla-beta-
Attachment #8592994 - Flags: approval-mozilla-aurora?
Attachment #8592994 - Flags: approval-mozilla-aurora-
Comment on attachment 8592994 [details] [diff] [review] Do not try to use WARP for popup windows The other patch has been approved. Should be in 38 beta 6.
Attachment #8592994 - Flags: approval-mozilla-beta?
Attachment #8592994 - Flags: approval-mozilla-beta+
Attachment #8592994 - Flags: approval-mozilla-aurora?
Attachment #8592994 - Flags: approval-mozilla-aurora+
We generally don't reopen bugs until they're backed out from m-c.
Status: REOPENED → RESOLVED
Closed: 11 years ago11 years ago
Resolution: --- → FIXED
mayankleoboy1, can you confirm this works fine now using the Firefox 38 Beta 6 build (ftp://ftp.mozilla.org/pub/mozilla.org/firefox/nightly/38.0b6-candidates/build1/win32/en-US/Firefox%20Setup%2038.0b6.exe)?
Flags: needinfo?(mayankleoboy1)
(In reply to Florin Mezei, QA (:FlorinMezei) from comment #47) > mayankleoboy1, can you confirm this works fine now using the Firefox 38 Beta > 6 build > (ftp://ftp.mozilla.org/pub/mozilla.org/firefox/nightly/38.0b6-candidates/ > build1/win32/en-US/Firefox%20Setup%2038.0b6.exe)? yup. This is fixed.
Flags: needinfo?(mayankleoboy1)
Thank you for confirming! Setting the verified flag.
This is happening on my Nightly x64 installation under Windows 7. My graphics card is an nVIDIA Quadro 2000 with 371.11 WHQL drivers. It appears 2017-05-06 enabled HW acceleration (I had it disabled) and I'm experiencing the exact same symptoms reporter documented here, including the URL bug. Nothing interesting in Graphics Decision Log in about:support. Could this bug be re-opened and investigated?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: