Bug 1150376 - Do not try to use D3D11 for popup windows. r=jrmuizel, a=sledru