widget/windows/nsWindow.h
@@ -273,6 +273,7 @@ public:
 
   virtual void GetPreferredCompositorBackends(nsTArray<mozilla::layers::LayersBackend>& aHints);
 
+  bool IsPopup();
   virtual bool ShouldUseOffMainThreadCompositing();
 
 protected:
